# VitalChain

./: .dockerignore  .gitignore  Dockerfile  HOWTORUN.md  LEADERBOARD.md  README.md  TECHNICAL_DETAILS.md  __init__.py  audit_ledger.py  blog_post.md  client.py  compatibility.py  eraktkosh.py  generate_grpo_plots.py  inference.py  models.py  openenv.yaml  pyproject.toml  rewards.py  simulation.py  tasks.py  train_evidence.py  train_vitalchain.ipynb  update_plots.py
assets/: pitch_deck.html
checkpoints/: rollouts_blood_bank_manager.json
plots/: .gitkeep  training_data.json
server/: app.py  environment.py  requirements.txt
server/static/: app.js  index.html  styles.css
tests/: test_environment.py  test_oracle.py
vitalchain-agent-test/: README.md  adapter_config.json  tokenizer.json
