[project]
name = "vitalchain-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for biological resource allocation across multi-hospital networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the server package AND the root-level .py modules
packages = ["server"]
include = [
    "models.py",
    "client.py",
    "compatibility.py",
    "rewards.py",
    "tasks.py",
    "inference.py",
    "simulation.py",
    "eraktkosh.py",
    "audit_ledger.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
